@@ -53,7 +53,7 @@ cdef xmlDoc* _fakeRootDoc(xmlDoc* c_base_doc, xmlNode* c_node):
         # already the root node
         return c_base_doc
 
-    c_doc  = tree.xmlCopyDoc(c_base_doc, 0)        # non recursive!
+    c_doc  = _copyDoc(c_base_doc, 0)               # non recursive!
     c_root = tree.xmlDocCopyNode(c_node, c_doc, 2) # non recursive!
 
     c_root.children = c_node.children
